# CMPNN

./: .gitignore  predict.py  pyproject.toml  run.sh  train_demo.py
cmpnn/: __init__.py  args.py  nn_utils.py  predict.py  random_forest.py  trainer.py  utils.py
cmpnn/data/: data.py  utils.py
cmpnn/features/: featurization.py
cmpnn/models/: model.py  mpn.py
cmpnn/train/: cross_validate.py  evaluate.py  make_predictions.py  predict.py  run_training.py  train.py
