[tool.poetry]
name = "cmpnn"
version = "0.1.0"
description = "A package for training and testing CMPNN model."
authors = ["Devansh Amin <devanshamin97@gmail.com>"]
readme = "README.md"
repository = "https://github.com/devanshamin/CMPNN"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "*"
numpy = "*"
numba = "*"
tqdm = "*"
rdkit = "^2022.9.5"
descriptastorus = "^2.6.1"
scikit-learn = "^1.4.1"
# If you simply put `torch = "2.2.0"`, it will install whole bunch
# of nvidia cuda libraries that are not required for CPU
torch = { version = "2.2.0+cpu", source = "pytorch" }
tensorboardX = "^2.6.2.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "supplemental"

[tool.poetry.dev-dependencies]
pytest = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
